--- a/src/App.css
+++ b/src/App.css
@@ -40,3 +40,40 @@
 .read-the-docs {
   color: #888;
 }
+
+
+/*  */
+.btn-wrapper button {
+  background-color: lightskyblue;
+  border: 0px;
+  padding:10px;
+  border-radius: 5px;
+  color: #fff;  
+}
+
+.img-wrapper img{
+  width: 100px;
+  margin-top: -10px;
+}
+
+.cart-wrapper{
+  height: 100px;
+  width: 500px;
+  border:1px solid #ccc;
+}
+.item {
+  float: left;
+  display: inline-block;
+  width: 120px;
+  padding: 20px;
+  height: 70px;
+}
+.add-to-cart img{
+  width:40px;
+  position: absolute;
+  right: 1%;
+  top: 1%;
+}
+
+
+/*  */
